--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "docx>=0.2.4",
+    "fpdf>=1.7.2",
+    "fpdf2>=2.8.3",
     "openai>=1.84.0",
     "pandas>=2.3.0",
     "python-docx>=1.1.2",
